# compiletime-serve-rs

./: Cargo.toml  README.md  build.rs
src/: main.rs
