[package]
name = "compiletime-serve-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = { git = "https://github.com/Michael-F-Bryan/include_dir.git" }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
